[gd_scene load_steps=37 format=3 uid="uid://bkrfx4kk46qui"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_wmlmx"]
[ext_resource type="FontFile" uid="uid://bs4wn8lq821l5" path="res://fonts/NotJamChunkySans.ttf" id="2_f1aie"]
[ext_resource type="Texture2D" uid="uid://cjjdvh80q0dxm" path="res://graphics/progress_bar_over.png" id="3_uattx"]
[ext_resource type="Texture2D" uid="uid://d3otih1xwa7g2" path="res://graphics/progress_bar.png" id="4_yskpf"]
[ext_resource type="Texture2D" uid="uid://882ajyq5akwp" path="res://graphics/keys.png" id="5_kf4ff"]
[ext_resource type="Script" path="res://scripts/upgrade_card_container.gd" id="6_2vbn1"]
[ext_resource type="PackedScene" uid="uid://s65dq4a3p8hf" path="res://scenes/ui_elements/minimap.tscn" id="7_nwx12"]
[ext_resource type="Texture2D" uid="uid://dq2cnh1sqxv1g" path="res://graphics/cursor.png" id="8_7c570"]
[ext_resource type="Texture2D" uid="uid://t8ckmrjn0o6v" path="res://graphics/pointing_hand_small_outer.png" id="9_47a8b"]
[ext_resource type="Texture2D" uid="uid://0ssdwvll1a56" path="res://graphics/pointing_hand_small_inner.png" id="10_ioomf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pyc1a"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="LabelSettings" id="LabelSettings_xoy25"]
line_spacing = 0.0
font = ExtResource("2_f1aie")
font_size = 12

[sub_resource type="AtlasTexture" id="AtlasTexture_05dnw"]
resource_local_to_scene = true
atlas = ExtResource("5_kf4ff")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_si5ju"]
atlas = ExtResource("5_kf4ff")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r30ip"]
atlas = ExtResource("5_kf4ff")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_25n30"]
atlas = ExtResource("5_kf4ff")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_japut"]
atlas = ExtResource("5_kf4ff")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_grh5u"]
atlas = ExtResource("5_kf4ff")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_adjja"]
atlas = ExtResource("5_kf4ff")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tu2i"]
atlas = ExtResource("5_kf4ff")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_by5pc"]
atlas = ExtResource("5_kf4ff")
region = Rect2(128, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_t8dk0"]
font = ExtResource("2_f1aie")
font_size = 12
outline_size = 8
outline_color = Color(0.223103, 0.223103, 0.223103, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ibiwc"]
font = ExtResource("2_f1aie")
font_size = 36
outline_size = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gtx0n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ntaj4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xb7l0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2gqjf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ygq3l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8op5l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pxexp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tf1w1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t0ykd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_53gup"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nyh3c"]

[sub_resource type="LabelSettings" id="LabelSettings_swo4g"]
font = ExtResource("2_f1aie")
font_size = 18
outline_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_ysc5c"]
font = ExtResource("2_f1aie")
font_size = 18
outline_size = 8

[node name="Hud" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_wmlmx")

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TopBar" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pyc1a")

[node name="MarginContainer" type="MarginContainer" parent="Control/TopBar"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UpperBar" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 26

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer2"]
layout_mode = 2

[node name="EnergyLabel" type="Label" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
text = "energy:"
label_settings = SubResource("LabelSettings_xoy25")
uppercase = true

[node name="EnergyBar" type="TextureProgressBar" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
step = 0.1
value = 5.0
texture_over = ExtResource("3_uattx")
texture_progress = ExtResource("4_yskpf")

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer2"]
layout_mode = 2

[node name="ShieldLabel" type="Label" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
text = "SHield:"
label_settings = SubResource("LabelSettings_xoy25")
uppercase = true

[node name="ShieldBar" type="TextureProgressBar" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
max_value = 50.0
value = 5.0
texture_over = ExtResource("3_uattx")
texture_progress = ExtResource("4_yskpf")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer2"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "HP:"
label_settings = SubResource("LabelSettings_xoy25")
uppercase = true

[node name="HPBar" type="TextureProgressBar" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
max_value = 50.0
value = 5.0
texture_over = ExtResource("3_uattx")
texture_progress = ExtResource("4_yskpf")

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 2

[node name="RoomLabel" type="Label" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer3"]
visible = false
layout_mode = 2
size_flags_vertical = 0
text = "ROOM:"
label_settings = SubResource("LabelSettings_xoy25")

[node name="CoordsLabel" type="Label" parent="Control/TopBar/MarginContainer/VBoxContainer/UpperBar/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "(0, 0)"
label_settings = SubResource("LabelSettings_xoy25")

[node name="LowerBar" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 2

[node name="DangerLabel" type="Label" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "danger level:"
label_settings = SubResource("LabelSettings_xoy25")
vertical_alignment = 1
uppercase = true

[node name="DangerAmountLabel" type="Label" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_xoy25")
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
mouse_filter = 2

[node name="KeysLabel" type="Label" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
text = "keys collected:"
label_settings = SubResource("LabelSettings_xoy25")
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_bottom = 1

[node name="KeysContainer" type="HBoxContainer" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer/KeysContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = SubResource("AtlasTexture_05dnw")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer/KeysContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = SubResource("AtlasTexture_si5ju")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer/KeysContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = SubResource("AtlasTexture_r30ip")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer/KeysContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = SubResource("AtlasTexture_25n30")
expand_mode = 2

[node name="TextureRect5" type="TextureRect" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer/KeysContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = SubResource("AtlasTexture_japut")
expand_mode = 2

[node name="TextureRect6" type="TextureRect" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer/KeysContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = SubResource("AtlasTexture_grh5u")
expand_mode = 2

[node name="TextureRect7" type="TextureRect" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer/KeysContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = SubResource("AtlasTexture_adjja")
expand_mode = 2

[node name="TextureRect8" type="TextureRect" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer/KeysContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = SubResource("AtlasTexture_5tu2i")
expand_mode = 2

[node name="TextureRect9" type="TextureRect" parent="Control/TopBar/MarginContainer/VBoxContainer/LowerBar/HBoxContainer2/MarginContainer/KeysContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = SubResource("AtlasTexture_by5pc")
expand_mode = 2

[node name="UIVeil" type="ColorRect" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="UpgradeCardContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -340.0
offset_right = 20.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 16
script = ExtResource("6_2vbn1")

[node name="Minimap" parent="Control" instance=ExtResource("7_nwx12")]
visible = false
layout_mode = 1
offset_left = -210.0
offset_right = 174.0

[node name="MessageLabel" type="Label" parent="Control"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -136.0
offset_right = 204.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
text = "retrieve all nine keys
to open the gate!"
label_settings = SubResource("LabelSettings_t8dk0")
horizontal_alignment = 1
uppercase = true

[node name="GameOverPanel" type="PanelContainer" parent="Control"]
visible = false
custom_minimum_size = Vector2(384, 192)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -76.0
offset_right = 192.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOverPanel"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="GameOverLabel" type="Label" parent="Control/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "game over"
label_settings = SubResource("LabelSettings_ibiwc")
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="RestartButton" type="Button" parent="Control/GameOverPanel/VBoxContainer/HBoxContainer" groups=["GameOverButtons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 24)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_gtx0n")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ntaj4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xb7l0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_2gqjf")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ygq3l")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_8op5l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pxexp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tf1w1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t0ykd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_53gup")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nyh3c")

[node name="RestartLabel" type="Label" parent="Control/GameOverPanel/VBoxContainer/HBoxContainer/RestartButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -8.5
offset_right = 80.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
text = "restart"
label_settings = SubResource("LabelSettings_swo4g")
horizontal_alignment = 1
uppercase = true

[node name="BackToMenuButton" type="Button" parent="Control/GameOverPanel/VBoxContainer/HBoxContainer" groups=["GameOverButtons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 24)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_gtx0n")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ntaj4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xb7l0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_2gqjf")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ygq3l")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_8op5l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pxexp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tf1w1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t0ykd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_53gup")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nyh3c")

[node name="BackToMenuLabel" type="Label" parent="Control/GameOverPanel/VBoxContainer/HBoxContainer/BackToMenuButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -8.5
offset_right = 80.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
text = "main menu"
label_settings = SubResource("LabelSettings_ysc5c")
horizontal_alignment = 1
uppercase = true

[node name="Cursor" type="Sprite2D" parent="."]
z_index = 5
texture_filter = 1
texture = ExtResource("8_7c570")

[node name="HandCursor" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("9_47a8b")
offset = Vector2(5, 21)

[node name="CursorInner" type="Sprite2D" parent="HandCursor"]
texture = ExtResource("10_ioomf")
offset = Vector2(5, 21)

[connection signal="cards_hidden" from="Control/UpgradeCardContainer" to="." method="_on_cards_hidden"]
[connection signal="pressed" from="Control/GameOverPanel/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/GameOverPanel/VBoxContainer/HBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
